--- a/blogpost.html
+++ b/blogpost.html
@@ -16,7 +16,7 @@
         <li><a href="#">Contacto</a></li>
     </ul></nav>
    
-   <h1>Aqui vamos a hacer el blogpost, tengo que calmarme porque estoy bastante asustado, sin emnbargo,  también sé que soy muy fuerte</h1>
+   <h1>ESTE CAMBIO LO HAGO ONLINE, PARA QUE SE VEA EN LOCAL</h1>
    <p>Y este el parrafo de inicio </p>
    <p>La historia de colmillo blanco:Sakumo era el padre de Kakashi Hatake. Fue el responsable de la muerte de los padres de Sasori, Y el objeto del odio de Chiyo. Su hijo debe parecerse a él puesto que al verle, La anciana Chiyo le confundió con Sakumo. Según el Cuarto Hokage, Una vez fue tan respetado como los Legendarios Sannin, Antes de caer en desgracia: En una misión, prefirió salvar a sus compañero… </p>
    <p id="jose">El nombre de jose </p>
