intente cambiar algo en la cabecera pero soy pesimo para eso en realidad para todo

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/estilos.css"/>
 </head>
 <body>
+    
     <nav><ul>
         <li><a href="#">Inicio</a></li>
         <li><a href="#">Quiénes somos</a></li>
@@ -15,11 +16,15 @@
         <li><a href="#">Blog</a></li>
         <li><a href="#">Contacto</a></li>
     </ul></nav>
-   
+    <nav class="logo">
+        <img src="naturo/logo.png" alt="">
+     </nav>
    <h1>ESTE CAMBIO LO HAGO ONLINE, PARA QUE SE VEA EN LOCAL</h1>
    <h2>Este es el primer cambio usando SSH</h2>
    <p>Y este el parrafo de inicio </p>
    <p>La historia de colmillo blanco:Sakumo era el padre de Kakashi Hatake. Fue el responsable de la muerte de los padres de Sasori, Y el objeto del odio de Chiyo. Su hijo debe parecerse a él puesto que al verle, La anciana Chiyo le confundió con Sakumo. Según el Cuarto Hokage, Una vez fue tan respetado como los Legendarios Sannin, Antes de caer en desgracia: En una misión, prefirió salvar a sus compañero… </p>
    <p id="jose">El nombre de jose </p>
+  
+</nav>
 </body>
 </html>
